# daily-report

api/: docker-compose.yaml  main.py  pyproject.toml
api/domain/: daily_report_exception.py
api/domain/daily_report/: __init__.py  daily_report.py  daily_report_repository.py
api/infrastructure/mysql/: database.py
api/infrastructure/mysql/daily_report/: __init__.py  daily_report_dto.py  daily_report_repository.py  daily_report_service.py
api/presentation/schema/daily_report/: daily_report_error_message.py
api/usecase/daily_report/: daily_report_command_model.py  daily_report_command_usecase.py  daily_report_query_model.py  daily_report_query_service.py  daily_report_query_usecase.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.tsx
web/src/components/: index.tsx
web/src/components/AgGrid/: index.tsx
web/src/components/atoms/Button/: index.tsx
web/src/components/atoms/Card/Body/: index.tsx
web/src/components/atoms/Card/Title/: index.tsx
web/src/components/organisms/AgGrid/: index.tsx
web/src/components/organisms/Card/: index.tsx
web/src/components/templates/AgGrid/: index.tsx
web/src/components/templates/DailyReports/: index.tsx
web/src/components/templates/JSONPlaceholder/: index.tsx
web/src/components/templates/JSONPlaceholders/: index.tsx
web/src/redux/actions/: index.ts
web/src/redux/reducers/: index.ts
web/src/redux/sagas/: articles.ts  daily-report.ts  index.ts
web/src/redux/slices/: articles.ts  daily-reports.ts  index.d.ts  index.ts
web/src/redux/store/: index.ts
