[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kosuke-17 <tamutamu17@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.19"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
shortuuid = "^1.0.11"
pymysql = "^1.1.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
